--- a/core/i18n/de/override.tex
+++ b/core/i18n/de/override.tex
@@ -1,5 +1,9 @@
 \sisetup{
     output-decimal-marker   = {,},
     list-final-separator    = {\text{ und }},
-    list-paid-separator     = {\text{ und }},
+    list-pair-separator     = {\text{ und }},
 }
+
+\captionsetup*[table]{name=Tafel}
+\captionsetup*[figure]{name=Abbildung}
+\captionsetup*[equation]{name=äquation}
