--- a/core/i18n/en/override.tex
+++ b/core/i18n/en/override.tex
@@ -3,3 +3,7 @@
     list-final-separator    = {\text{ and }},
     list-pair-separator     = {\text{ and }},
 }
+
+\captionsetup*[table]{name=Table}
+\captionsetup*[figure]{name=Figure}
+\captionsetup*[equation]{name=Equation}
