--- a/core/i18n/es/override.tex
+++ b/core/i18n/es/override.tex
@@ -3,3 +3,7 @@
     list-final-separator    = {\text{ y }},
     list-pair-separator     = {\text{ y }},
 }
+
+\captionsetup*[table]{name=Tabla}
+\captionsetup*[figure]{name=Figura}
+\captionsetup*[equation]{name=Ecuación}
