--- a/core/i18n/sk/override.tex
+++ b/core/i18n/sk/override.tex
@@ -3,3 +3,7 @@
     list-final-separator    = {\text{ a }},
     list-pair-separator     = {\text{ a }},
 }
+
+\captionsetup*[table]{name=Tabuľka}
+\captionsetup*[figure]{name=Obrázok}
+\captionsetup*[equation]{name=Rovnica}
