--- a/core/tex/math.tex
+++ b/core/tex/math.tex
@@ -274,6 +274,9 @@
 \NewDocumentCommand{\ExpectedChevrons}{m}{\left<#1\right>}
 \NewDocumentCommand{\ExpectedE}{m}{\mathrm{E}\left[#1\right]}
 \NewDocumentCommand{\Mean}{m}{\overline{#1}}
+\NewDocumentCommand{\Var}{m}{\mathrm{Var}\left(#1\right)}
+\NewDocumentCommand{\MSE}{m}{\mathrm{MSE}\left({#1}\right)}
+\NewDocumentCommand{\Bias}{m}{\mathrm{Bias}\left({#1}\right)}
 
 % Text with spaces on both sides
 \NewDocumentCommand{\QText}{m}{\quad\text{#1}\quad}
