--- a/core/i18n/cs/override.tex
+++ b/core/i18n/cs/override.tex
@@ -3,3 +3,7 @@
     list-final-separator    = {\text{ a }},
     list-pair-separator     = {\text{ a }},
 }
+
+\captionsetup*[table]{name=Tabulka}
+\captionsetup*[figure]{name=Obrázek}
+\captionsetup*[equation]{name=Rovnice}
