--- a/core/i18n/hu/override.tex
+++ b/core/i18n/hu/override.tex
@@ -3,3 +3,7 @@
     list-final-separator    = {\text{ és }},
     list-pair-separator     = {\text{ és }},
 }
+
+\captionsetup*[table]{name=Táblázat}
+\captionsetup*[figure]{name=Ábra}
+\captionsetup*[equation]{name=Equation??}
