Sanitizing contexts and builders

--- a/core/i18n/cs/override.tex
+++ b/core/i18n/cs/override.tex
@@ -1,3 +1,6 @@
+\selectlanguage{czech}
+\setquotestyle{czech}
+
 \sisetup{
     output-decimal-marker   = {,},
     list-final-separator    = {\text{ a }},
