--- a/core/i18n/de/override.tex
+++ b/core/i18n/de/override.tex
@@ -1,9 +1,12 @@
+\selectlanguage{german}
+\setquotestyle{german}
+
 \sisetup{
     output-decimal-marker   = {,},
     list-final-separator    = {\text{ und }},
     list-pair-separator     = {\text{ und }},
 }
 
-\captionsetup*[table]{name=Tafel}
+\captionsetup*[table]{name=Tabelle}
 \captionsetup*[figure]{name=Abbildung}
-\captionsetup*[equation]{name=äquation}
+\captionsetup*[equation]{name=Gleichung}
