--- a/core/i18n/es/override.tex
+++ b/core/i18n/es/override.tex
@@ -1,3 +1,6 @@
+\selectlanguage{spanish}
+\setquotestyle{spanish}
+
 \sisetup{
     output-decimal-marker   = {,},
     list-final-separator    = {\text{ y }},
