--- a/core/i18n/fr/override.tex
+++ b/core/i18n/fr/override.tex
@@ -1,5 +1,12 @@
+\selectlanguage{french}
+\setquotestyle[guillemets]{french}
+
 \sisetup{
     output-decimal-marker   = {,},
     list-final-separator    = {\text{ et }},
     list-pair-separator     = {\text{ et }},
 }
+
+\captionsetup*[table]{name=Tableau}
+\captionsetup*[figure]{name=Figure}
+\captionsetup*[equation]{name=Équation}
