--- a/core/i18n/sk/override.tex
+++ b/core/i18n/sk/override.tex
@@ -1,3 +1,6 @@
+\selectlanguage{slovak}
+\setquotestyle{slovak}
+
 \sisetup{
     output-decimal-marker   = {,},
     list-final-separator    = {\text{ a }},
