--- a/core/i18n/hu/override.tex
+++ b/core/i18n/hu/override.tex
@@ -1,3 +1,6 @@
+\selectlanguage{hungarian}
+\setquotestyle{hungarian}
+
 \sisetup{
     output-decimal-marker   = {\text{,}},
     list-final-separator    = {\text{ és }},
