--- a/core/i18n/pl/override.tex
+++ b/core/i18n/pl/override.tex
@@ -1,5 +1,12 @@
+\selectlanguage{polish}
+\setquotestyle{polish}
+
 \sisetup{
     output-decimal-marker   = {\text{,}},
     list-final-separator    = {\text{ i }},
     list-pair-separator     = {\text{ i }},
 }
+
+\captionsetup*[table]{name=Tabela}
+\captionsetup*[figure]{name=Figura}
+\captionsetup*[equation]{name=Równanie}
