--- a/core/i18n/en/override.tex
+++ b/core/i18n/en/override.tex
@@ -1,3 +1,6 @@
+\selectlanguage{english}
+\setquotestyle{english}
+
 \sisetup{
     output-decimal-marker   = {.},
     list-final-separator    = {\text{ and }},
