--- a/core/i18n/hu/override.tex
+++ b/core/i18n/hu/override.tex
@@ -9,4 +9,4 @@
 
 \captionsetup*[table]{name=Táblázat}
 \captionsetup*[figure]{name=Ábra}
-\captionsetup*[equation]{name=Equation??}
+\captionsetup*[equation]{name=Egyenlet}
