--- a/core/tex/siunitx.tex
+++ b/core/tex/siunitx.tex
@@ -27,18 +27,21 @@
 \DeclareSIUnit{\mile}{mi}
 
 \DeclareSIUnit{\au}{au}
+\DeclareSIUnit{\parsec}{pc}
+\DeclareSIUnit{\lightyear}{ly}
+\DeclareSIUnit{\mag}{\!\ensuremath{^\mathrm{m}}}
+\DeclareSIUnit{\textarcsecond}{as}
+\DeclareSIUnit{\solarmass}{\ensuremath{\mathrm{M}_\Sun}}
+\DeclareSIUnit{\solarluminosity}{\ensuremath{\mathrm{L}_\Sun}}
+\DeclareSIUnit{\earthmass}{\ensuremath{\mathrm{M}_\Earth}}
+
 \DeclareSIUnit{\byte}{B}
 \DeclareSIUnit{\litre}{l}
 \DeclareSIUnit{\celsius}{\text{°}C}
 \DeclareSIUnit{\fahrenheit}{\text{°}F}
-\DeclareSIUnit{\parsec}{pc}
+
 \DeclareSIUnit{\pixel}{px}
 \DeclareSIUnit{\eur}{€}
-\DeclareSIUnit{\mag}{\!\ensuremath{^\mathrm{m}}}
-\DeclareSIUnit{\solarmass}{\ensuremath{\mathrm{M}_\Sun}}
-\DeclareSIUnit{\solarluminosity}{\ensuremath{\mathrm{L}_\Sun}}
-\DeclareSIUnit{\earthmass}{\ensuremath{\mathrm{M}_\Earth}}
-\DeclareSIUnit{\lightyear}{ly}
 \DeclareSIUnit{\atmosphere}{atm}
 \DeclareSIUnit{\atomicmass}{u}
 
