Finishing the conversion to global i18n, new enschema

--- a/modules/simple/templates/base.tex
+++ b/modules/simple/templates/base.tex
@@ -1,7 +1,7 @@
 \documentclass[12pt, twoside]{dgs}
 
 \setActive{\rootDirectory/(* module.id *)/(* job.id *)(* course.id *)/(* year.id *)/(* self.typedir() *)/(* issue.id *)/}%
-\input{core/i18n/(* i18n.language *)/override.tex}
+\input{build/core/i18n/(* i18n.language *).tex}
 
 \begin{document}
     (@ block content @)(@ endblock content @)
