--- a/core/tex/math.tex
+++ b/core/tex/math.tex
@@ -248,6 +248,7 @@
 
 \def\omicron{o}
 \DeclareMathOperator{\atantwo}{atan2}
+\DeclareMathOperator{\arccot}{arccot}
 
 % Logical operators
 \DeclareMathOperator{\LXor}{\quad\lxor\quad}
