Updates to convertor

--- a/core/tex/dgs.cls
+++ b/core/tex/dgs.cls
@@ -88,7 +88,8 @@
     russian,
     polish,
     spanish,
-    english
+    english,
+    shorthands=off,
 ]{babel}                                      % multi-language support
 \RequirePackage{xunicode}
 \RequirePackage{cleveref}
