--- a/core/latex/wrt.tex
+++ b/core/latex/wrt.tex
@@ -32,8 +32,8 @@
     BoldItalicFont  = *-BoldIt
 ]{MinionPro}
 
-\input{core/tex/siunitx.tex}
-\input{core/tex/math.tex}
+\input{core/latex/siunitx.tex}
+\input{core/latex/math.tex}
 
 \changefontsizes{13pt}
 
