Fixing merge problems

--- a/core/latex/math.tex
+++ b/core/latex/math.tex
@@ -29,8 +29,6 @@
 
 \ExplSyntaxOff
 
-\DeclareMathOperator{\arccot}{\mathrm{arccot}}
-
 % Section: differentials
 
 % Regular upright differential
@@ -251,6 +249,7 @@
 \def\omicron{o}
 \DeclareMathOperator{\atantwo}{atan2}
 \DeclareMathOperator{\arccot}{arccot}
+\DeclareMathOperator{\arccsc}{arccsc}
 
 % Logical operators
 \DeclareMathOperator{\LXor}{\quad\lxor\quad}
