--- a/core/latex/siunitx.tex
+++ b/core/latex/siunitx.tex
@@ -43,6 +43,7 @@
 \DeclareSIUnit{\pixel}{px}
 \DeclareSIUnit{\eur}{€}
 \DeclareSIUnit{\atmosphere}{atm}
+\DeclareSIUnit{\torr}{Torr}
 \DeclareSIUnit{\atomicmass}{u}
 
 \DeclareSIUnit{\molar}{M}
