Added pH and pKa to chemical shorthands

--- a/core/latex/symbols.tex
+++ b/core/latex/symbols.tex
@@ -1,3 +1,4 @@
+% Planets
 \RenewDocumentCommand{\Sun}{}{\text{\sun}}
 \NewDocumentCommand{\Mercury}{}{\text{\mercury}}
 \NewDocumentCommand{\Venus}{}{\text{\venus}}
@@ -9,3 +10,7 @@
 \NewDocumentCommand{\Uranus}{}{\text{\uranus}}
 \NewDocumentCommand{\Neptune}{}{\text{\neptune}}
 \NewDocumentCommand{\Pluto}{}{\text{\pluto}}
+
+% Chemistry
+\NewDocumentCommand{\pH}{}{\mathrm{p}\ce{H}}
+\NewDocumentCommand{\pKa}{}{\mathrm{p}K_a}
