Added convertor todo and kWh

--- a/core/latex/siunitx.tex
+++ b/core/latex/siunitx.tex
@@ -29,6 +29,7 @@
 \DeclareSIUnit{\au}{au}
 \DeclareSIUnit{\parsec}{pc}
 \DeclareSIUnit{\lightyear}{ly}
+\DeclareSIUnit{\kWh}{kWh}
 \DeclareSIUnit{\mag}{\!\ensuremath{^\mathrm{m}}}
 \DeclareSIUnit{\textarcsecond}{as}
 \DeclareSIUnit{\solarmass}{\ensuremath{\mathrm{M}_\Sun}}
@@ -41,7 +42,7 @@
 \DeclareSIUnit{\fahrenheit}{\text{°}F}
 
 \DeclareSIUnit{\pixel}{px}
-\DeclareSIUnit{\eur}{€}
+\DeclareSIUnit{\eur}{\text{€}}
 \DeclareSIUnit{\atmosphere}{atm}
 \DeclareSIUnit{\torr}{Torr}
 \DeclareSIUnit{\atomicmass}{u}
