--- a/core/latex/siunitx.tex
+++ b/core/latex/siunitx.tex
@@ -29,7 +29,7 @@
 \DeclareSIUnit{\au}{au}
 \DeclareSIUnit{\parsec}{pc}
 \DeclareSIUnit{\lightyear}{ly}
-\DeclareSIUnit{\kWh}{kWh}
+\DeclareSIUnit{\watthour}{Wh}
 \DeclareSIUnit{\mag}{\!\ensuremath{^\mathrm{m}}}
 \DeclareSIUnit{\textarcsecond}{as}
 \DeclareSIUnit{\solarmass}{\ensuremath{\mathrm{M}_\Sun}}
