Broke up Náboj templates, vulgar fractions

--- a/core/latex/math.tex
+++ b/core/latex/math.tex
@@ -395,3 +395,12 @@
 % Patch \left and \right with package mleftright
 \let\left\mleft
 \let\right\mright
+
+\NewDocumentCommand{\OneHalf}{}{\text{½}}
+
+\NewDocumentCommand{\OneThird}{}{\text{⅓}}
+\NewDocumentCommand{\TwoThirds}{}{\text{⅔}}
+
+\NewDocumentCommand{\OneQuarter}{}{\text{¼}}
+\NewDocumentCommand{\ThreeQuarters}{}{\text{¾}}
+% (and more but later)
