--- a/core/latex/siunitx.tex
+++ b/core/latex/siunitx.tex
@@ -19,7 +19,7 @@
 \DeclareSIUnit{\ppm}{ppm}
 \DeclareSIUnit{\ppb}{ppb}
 
-\DeclareSIUnit{\gforce}{g}
+\DeclareSIUnit{\gforce}{\textit{g}}
 \DeclareSIUnit{\year}{y}
 
 \DeclareSIUnit{\inch}{in}
