--- a/core/latex/siunitx.tex
+++ b/core/latex/siunitx.tex
@@ -13,6 +13,7 @@
     range-phrase                = {\text{ -- }},                % 5 -- 10 m/s
     list-units                  = single,                       %
     retain-explicit-plus        = true,
+    forbid-literal-units        = true,
 }
 
 \DeclareSIUnit{\permille}{\text{\textperthousand}}
