Answer-also for Náboj, annum

--- a/core/latex/siunitx.tex
+++ b/core/latex/siunitx.tex
@@ -21,7 +21,7 @@
 \DeclareSIUnit{\ppb}{ppb}
 
 \DeclareSIUnit{\gforce}{\textit{g}}
-\DeclareSIUnit{\year}{y}
+\DeclareSIUnit{\year}{a}
 
 \DeclareSIUnit{\inch}{in}
 \DeclareSIUnit{\foot}{ft}
