Repeat SI units

--- a/core/latex/siunitx.tex
+++ b/core/latex/siunitx.tex
@@ -9,9 +9,9 @@
     input-decimal-markers       = {.},
     exponent-product            = \cdot,                        % \times for 5×10^7, \cdot for 5.1O^7
     number-unit-product         = {\ },                         % a non-breakable space between numbers and units
-    range-units                 = single,
+    range-units                 = repeat,
     range-phrase                = {\text{ -- }},                % 5 -- 10 m/s
-    list-units                  = single,                       %
+    list-units                  = repeat,                       %
     retain-explicit-plus        = true,
     forbid-literal-units        = true,
 }
