Added calorie to siunitx

--- a/core/latex/siunitx.tex
+++ b/core/latex/siunitx.tex
@@ -42,6 +42,8 @@
 \DeclareSIUnit{\celsius}{\text{°}C}
 \DeclareSIUnit{\fahrenheit}{\text{°}F}
 
+\DeclareSIUnit{\calorie}{cal}
+
 \DeclareSIUnit{\pixel}{px}
 \DeclareSIUnit{\eur}{\text{€}}
 \DeclareSIUnit{\atmosphere}{atm}
