scholar validator and dawn of teams era

--- a/modules/scholar/i18n/sk.yaml
+++ b/modules/scholar/i18n/sk.yaml
@@ -10,7 +10,7 @@ homework:
   title: "domáca úloha"
   deadline: "termín odovzdania"
   disclaimer:
-    foreword: "Vypracovanú úlohu odovzdajte na papieri alebo"
+    foreword: "Vypracovanú úlohu odovzdajte cez Teams do"
     midword: "najneskôr do začiatku cvičenia"
     aftword: "Odovzdaním čestne prehlasujete, že riešenia sú vaše vlastné."
 
