Fixes to i18n/de

--- a/core/latex/siunitx.tex
+++ b/core/latex/siunitx.tex
@@ -11,6 +11,7 @@
     number-unit-product         = {\ },                         % a non-breakable space between numbers and units
     range-units                 = repeat,
     range-phrase                = {\text{ -- }},                % 5 -- 10 m/s
+    list-separator              = {\text{,}\allowbreak\ },
     list-units                  = repeat,                       %
     retain-explicit-plus        = true,
     forbid-literal-units        = true,
