Microfix to Distribution

--- a/core/latex/math.tex
+++ b/core/latex/math.tex
@@ -354,7 +354,7 @@
 \NewDocumentCommand{\Mag}{m}{\ensuremath{{#1}^{\mathrm{m}}}}
 
 % Distribution #1 of variable #2 with parameters #3
-\NewDocumentCommand{\Distribution}{m m m}{#1(#2 \mid #3)}
+\NewDocumentCommand{\Distribution}{m m m}{#1\left(#2 \mid #3\right)}
 
 % Asymptotic notations
 \NewDocumentCommand{\SmallO}{m}{\mathcal{o}\left(#1\right)}
