--- a/core/latex/siunitx.tex
+++ b/core/latex/siunitx.tex
@@ -32,7 +32,9 @@
 \DeclareSIUnit{\parsec}{pc}
 \DeclareSIUnit{\lightyear}{ly}
 \DeclareSIUnit{\watthour}{Wh}
-\DeclareSIUnit{\mag}{\!\ensuremath{^\mathrm{m}}}
+\DeclareSIUnit{\upmag}{\kern-0.25em\ensuremath{^\mathrm{m}}}
+\DeclareSIUnit{\mag}{mag}
+\DeclareSIUnit{\rpm}{rpm}
 \DeclareSIUnit{\textarcsecond}{as}
 \DeclareSIUnit{\solarmass}{\ensuremath{\mathrm{M}_\Sun}}
 \DeclareSIUnit{\solarluminosity}{\ensuremath{\mathrm{L}_\Sun}}
