Changed label token separator to :

--- a/modules/scholar/i18n/en.yaml
+++ b/modules/scholar/i18n/en.yaml
@@ -10,9 +10,9 @@ homework:
   title: "exercise sheet"
   deadline: "deadline"
   disclaimer:
-    foreword: "Submit your solutions on paper or by email to"
-    midword: "before the beginning of the exercise"
-    aftword: "By submitting you declare that the solutions are your original work."
+    foreword: "Submit your solutions via Moodle before"
+    midword: " "
+    aftword: " "
 
 handout:
   title: "handout"
