--- a/core/latex/siunitx.tex
+++ b/core/latex/siunitx.tex
@@ -32,6 +32,7 @@
 \DeclareSIUnit{\parsec}{pc}
 \DeclareSIUnit{\lightyear}{ly}
 \DeclareSIUnit{\watthour}{Wh}
+\DeclareSIUnit{\jansky}{Jy}
 \DeclareSIUnit{\upmag}{\kern-0.25em\ensuremath{^\mathrm{m}}}
 \DeclareSIUnit{\mag}{mag}
 \DeclareSIUnit{\rpm}{rpm}
