defining new si units

--- a/core/latex/siunitx.tex
+++ b/core/latex/siunitx.tex
@@ -37,9 +37,9 @@
 \DeclareSIUnit{\mag}{mag}
 \DeclareSIUnit{\rpm}{rpm}
 \DeclareSIUnit{\textarcsecond}{as}
-\DeclareSIUnit{\solarmass}{\ensuremath{\mathrm{M}_\Sun}}
-\DeclareSIUnit{\solarluminosity}{\ensuremath{\mathrm{L}_\Sun}}
-\DeclareSIUnit{\earthmass}{\ensuremath{\mathrm{M}_\Earth}}
+\DeclareSIUnit{\solarmass}{\ensuremath{\mathrm{M}_{\Sun}}}
+\DeclareSIUnit{\solarluminosity}{\ensuremath{\mathrm{L}_{\Sun}}}
+\DeclareSIUnit{\earthmass}{\ensuremath{\mathrm{M}_{\Earth}}}
 
 \DeclareSIUnit{\byte}{B}
 \DeclareSIUnit{\litre}{l}
@@ -47,6 +47,8 @@
 \DeclareSIUnit{\fahrenheit}{\text{°}F}
 
 \DeclareSIUnit{\calorie}{cal}
+\DeclareSIUnit{\dyne}{dyn}
+\DeclareSIUnit{\erg}{erg}
 
 \DeclareSIUnit{\pixel}{px}
 \DeclareSIUnit{\eur}{\text{€}}
